--- a/res/layout/longin.xml
+++ b/res/layout/longin.xml
@@ -29,69 +29,82 @@
     <EditText
         android:id="@+id/longin_phone"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/login_top_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="40dp"
-        android:hint="请输入你的手机"
-        android:textColor="#000"
-        android:textSize="15sp" >
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/login_top_layout"
+	    android:textColor="#000"
+	    android:textSize="15sp"
+	    android:layout_marginTop="50dp"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginRight="20dp"
+	    android:singleLine="true"
+	    android:background="@drawable/login_edbox"
+        android:hint="请输入你的手机" >
     </EditText>
 
     <EditText
         android:id="@+id/login_password"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/longin_phone"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="20dp"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/longin_phone"
+	    android:textColor="#000"
+	    android:textSize="15sp"
+	    android:layout_marginTop="25dp"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginRight="20dp"
+	    android:singleLine="true"
+	    android:background="@drawable/login_edbox"
         android:hint="请输入你的密码"
-        android:inputType="numberPassword"
-        android:textColor="#000"
-        android:textSize="15sp" />
+       />
 
     <EditText
         android:id="@+id/company_id"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/longin_password"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="20dp"
-        android:hint="请输入你公司的id"
-        android:inputType="numberPassword"
-        android:textColor="#000"
-        android:textSize="15sp" />
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/login_password"
+	    android:textColor="#000"
+	    android:textSize="15sp"
+	    android:layout_marginTop="25dp"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginRight="20dp"
+	    android:singleLine="true"
+	    android:background="@drawable/login_edbox"
+        android:hint="请输入你的密码"
+        />
 
     <Button
         android:id="@+id/login"
         android:layout_width="fill_parent"
-        android:layout_height="25dp"
+        android:layout_height="30dp"
         android:layout_below="@+id/company_id"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="50dp"
         android:textColor="@color/white"
         android:background="@color/lightskyblue"
         android:text="登录" />
 
     <Button
-        android:id="@+id/sign_in"
+        android:id="@+id/sign_in_bt"
         android:layout_width="fill_parent"
-        android:layout_height="25dp"
+        android:layout_height="30dp"
         android:layout_below="@+id/login"
         android:textColor="@color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
         android:layout_marginTop="20dp"
         android:background="@color/lightskyblue"
         android:text="注册" />
+
+    <Button
+        android:id="@+id/forget_passwd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/company_id"
+        android:layout_below="@+id/company_id"
+        android:background="#0000"
+        android:text="忘记密码?"
+        android:textColor="#00f"
+        android:textSize="16sp" />
 
 </RelativeLayout>
