--- a/res/layout/sign_in.xml
+++ b/res/layout/sign_in.xml
@@ -26,15 +26,16 @@
 
     <EditText
         android:id="@+id/sign_phone"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_top_layout"
+       android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/sign_top_layout"
 	    android:textColor="#000"
 	    android:textSize="15sp"
-	    android:layout_marginLeft="25dp"
-	    android:layout_marginRight="25dp"
-	    android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
+	    android:layout_marginTop="25dp"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginRight="20dp"
+	    android:singleLine="true"
+	    android:background="@drawable/login_edbox"
         android:hint="请输入手机号"
          >
 
@@ -42,14 +43,15 @@
 <EditText
         android:id="@+id/sign_company"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_phone"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/sign_phone"
 	    android:textColor="#000"
 	    android:textSize="15sp"
-	    android:layout_marginLeft="25dp"
-	    android:layout_marginRight="25dp"
-	    android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
+	    android:layout_marginTop="25dp"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginRight="20dp"
+	    android:singleLine="true"
+	    android:background="@drawable/login_edbox"
         android:hint="请输入组织名"
          >
 
@@ -58,30 +60,30 @@
         android:id="@+id/sign_password1"
         android:hint="请输入密码"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_company"
-        android:textColor="#000"
-        android:layout_marginTop="20dp"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/sign_company"
+	    android:textColor="#000"
 	    android:textSize="15sp"
-	    android:layout_marginLeft="25dp"
-	    android:layout_marginRight="25dp"
-	    android:inputType="numberPassword"
-        android:layout_centerVertical="true"
+	    android:layout_marginTop="25dp"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginRight="20dp"
+	    android:singleLine="true"
+	    android:background="@drawable/login_edbox"
          />
 
     <EditText
         android:id="@+id/sign_password2"
         android:hint="再次输入密码"
-		android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_password1"
-        android:textColor="#000"
-        android:layout_marginTop="20dp"
+		 android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/sign_password1"
+	    android:textColor="#000"
 	    android:textSize="15sp"
-	    android:layout_marginLeft="25dp"
-	    android:layout_marginRight="25dp"
-	    android:inputType="numberPassword"
-        android:layout_centerVertical="true"
+	    android:layout_marginTop="25dp"
+	    android:layout_marginLeft="20dp"
+	    android:layout_marginRight="20dp"
+	    android:singleLine="true"
+	    android:background="@drawable/login_edbox"
          />
         <RelativeLayout 
         android:id="@+id/sign_down_layout"
@@ -100,13 +102,14 @@
         android:textColor="#000"
         android:layout_marginTop="20dp"
 	    android:textSize="15sp"
+	     android:background="@drawable/login_edbox"
 	    android:inputType="numberPassword"
         android:layout_centerVertical="true"/>
 
          <Button
              android:id="@+id/sign_massage_button"
              android:layout_width="110dp"
-             android:layout_height="25dp"
+             android:layout_height="30dp"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:textColor="@color/white"
@@ -123,7 +126,7 @@
         android:layout_marginLeft="50dp"
 	    android:layout_marginRight="50dp"
 	    android:layout_marginTop="20dp"
-        android:layout_height="25dp"
+        android:layout_height="30dp"
         android:textColor="@color/white"
         android:layout_below="@+id/sign_down_layout"
         android:layout_centerHorizontal="true" />
