--- a/res/layout/main_iteam.xml
+++ b/res/layout/main_iteam.xml
@@ -2,25 +2,20 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
+	<View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:layout_above="@+id/main_bottom"
+        android:background="?android:attr/listDivider" />
     <RelativeLayout
         android:id="@+id/main_bottom"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        android:background="@drawable/bottom_bar"
+        android:background="@color/white"
         >             
-      
-        <ImageView
-        	android:id="@+id/img_tab_now"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"        	     	
-        	android:scaleType="matrix"
-        	android:layout_gravity="bottom"            	
-            android:layout_alignParentBottom="true"
-        	android:src="@drawable/tab_bg" />              
-         
-         
+   
          <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -33,20 +28,16 @@
             	android:layout_height="wrap_content"
               	android:gravity="center_horizontal"
               	android:orientation="vertical"
-              	android:layout_weight="1">               	
+              	android:layout_weight="1">
+
                 <ImageView
-            		android:id="@+id/img_weixin"
-        			android:layout_width="wrap_content"
-        			android:layout_height="wrap_content"        	     	
-        			android:scaleType="matrix"
-        			android:clickable="true"
-        			android:src="@drawable/tab_weixin_pressed" />
-                <TextView
-            		android:layout_width="wrap_content"
-            		android:layout_height="wrap_content"
-            		android:text="微信"
-            		android:textColor="#fff"
-            		android:textSize="12sp" />                
+                    android:id="@+id/img_task"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:scaleType="matrix"
+                    android:src="@drawable/main_tab_task_normal" />
+               
         	 </LinearLayout>
         	 <LinearLayout
             	android:layout_width="wrap_content"
@@ -55,40 +46,13 @@
               	android:orientation="vertical"
               	android:layout_weight="1">               	
                 <ImageView
-            		android:id="@+id/img_address"
+            		android:id="@+id/img_group"
         			android:layout_width="wrap_content"
         			android:layout_height="wrap_content"        	     	
         			android:scaleType="matrix"
         			android:clickable="true"
-        			android:src="@drawable/tab_address_normal" />
-                <TextView
-            		android:layout_width="wrap_content"
-            		android:layout_height="wrap_content"
-            		android:text="通讯录"
-            		android:textColor="#fff"
-            		android:textSize="12sp" />                
+        			android:src="@drawable/main_tab_ground_normal" />           
         	 </LinearLayout>
-        	 <LinearLayout
-            	android:layout_width="wrap_content"
-            	android:layout_height="wrap_content"
-              	android:gravity="center_horizontal"
-              	android:orientation="vertical"
-              	android:layout_weight="1">               	
-                <ImageView
-            		android:id="@+id/img_friends"
-        			android:layout_width="wrap_content"
-        			android:layout_height="wrap_content"        	     	
-        			android:scaleType="matrix"
-        			android:clickable="true"
-        			android:src="@drawable/tab_find_frd_normal" />
-                <TextView
-            		android:layout_width="wrap_content"
-            		android:layout_height="wrap_content"
-            		android:text="朋友们"
-            		android:textColor="#fff"
-            		android:textSize="12sp" />                
-        	 </LinearLayout>
-        	 
         	 <LinearLayout
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
@@ -101,14 +65,8 @@
         			android:layout_height="wrap_content"        	     	
         			android:scaleType="matrix"
         			android:clickable="true"
-        			android:src="@drawable/tab_settings_normal" />
-                <TextView
-            		android:layout_width="wrap_content"
-            		android:layout_height="wrap_content"
-            		android:text="设置"
-            		android:textColor="#fff"
-            		android:textSize="12sp" />                
-        	 </LinearLayout>        
+        			android:src="@drawable/main_tab_setting_normal" />            
+        	 </LinearLayout>       
           
         </LinearLayout>     
        
